# depvuln-env

./: CLAUDE.md  Dockerfile  GEMINI.md  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: __init__.py  app.py  depvuln_environment.py  graders.py  tasks.py
